Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14742

Options dialog sometimes doesn't open previous page

XMLWordPrintable

      1. Go to "Tools" -> "Options" -> "FakeVim" -> "General".
      2. Change a setting and click "OK".
      3. Go to "Tools" -> "Options" again.
        You are on the "Environment" -> "General" page.
      4. Go to "C++" -> "File Naming".
      5. Change a setting and click "OK".
      6. Go to "Tools" -> "Options" again.
        You are on "C++" -> "File Naming" again.

      Creator should always show the last settings page the user was on. As you see, this works correctly for some pages (steps 5,6). On other pages (steps 3,4), it does not work.

        For Gerrit Dashboard: QTCREATORBUG-14742
        # Subject Branch Project Status CR V

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes