Preferences: Options pages need unique IDs

Since we are referring to them by ID without specifying the category in
addition.
This requirement was implicitly added by
592ffe737794c59045b6d2f7964621ecfd44dea3

Task-number: QTCREATORBUG-14742
Change-Id: I7be539127b76de90c19b0282565d845fa42010ab
Reviewed-by: Robert Loehning <robert.loehning@theqtcompany.com>
Reviewed-by: hjk <hjk@theqtcompany.com>